--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -3,7 +3,14 @@ on:
   pull_request:
     types:
       - opened
-  workflow_dispatch: 
+    branches:
+      - main
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+    paths-ignore:
+       - '.github/workflows/*'
 jobs:
   deploy:
     runs-on: ubuntu-latest
